--- a/test-output/old/Default suite/methods-alphabetical.html
+++ b/test-output/old/Default suite/methods-alphabetical.html
@@ -1,8 +1,26 @@
 <h2>Methods run, sorted chronologically</h2><h3>&gt;&gt; means before, &lt;&lt; means after</h3><p/><br/><em>Default suite</em><p/><small><i>(Hover the method name to see the test class name)</i></small><p/>
 <table border="1">
 <tr><th>Time</th><th>Delta (ms)</th><th>Suite<br>configuration</th><th>Test<br>configuration</th><th>Class<br>configuration</th><th>Groups<br>configuration</th><th>Method<br>configuration</th><th>Test<br>method</th><th>Thread</th><th>Instances</th></tr>
-<tr bgcolor="958a8d">  <td>22/01/05 22:58:16</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="Dataprovider_Test.userdetails(java.lang.String, int)[pri:0, instance:com.testng.features.Dataprovider_Test@71bbf57e]">userdetails</td> 
-  <td>main@1502635287</td>   <td></td> </tr>
-<tr bgcolor="958a8d">  <td>22/01/05 22:58:16</td>   <td>50</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="Dataprovider_Test.userdetails(java.lang.String, int)[pri:0, instance:com.testng.features.Dataprovider_Test@71bbf57e]">userdetails</td> 
-  <td>main@1502635287</td>   <td></td> </tr>
+<tr bgcolor="6b6398">  <td>22/01/16 23:10:18</td>   <td>0</td> <td>&nbsp;</td><td title="&lt;&lt;Convert_Testng$Covert.Close()[pri:0, instance:com.TestNG.Convert_Testng$Covert@4bd31064]">&lt;&lt;Close</td> 
+<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@297490204</td>   <td></td> </tr>
+<tr bgcolor="6b6398">  <td>22/01/16 23:09:59</td>   <td>-19376</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="Convert_Testng$Covert.Confirmation()[pri:2, instance:com.TestNG.Convert_Testng$Covert@4bd31064]">Confirmation</td> 
+  <td>main@297490204</td>   <td></td> </tr>
+<tr bgcolor="6b6398">  <td>22/01/16 23:09:45</td>   <td>-33264</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="Convert_Testng$Covert.Method()[pri:0, instance:com.TestNG.Convert_Testng$Covert@4bd31064]">Method</td> 
+  <td>main@297490204</td>   <td></td> </tr>
+<tr bgcolor="6b6398">  <td>22/01/16 23:09:31</td>   <td>-46936</td> <td>&nbsp;</td><td title="&gt;&gt;Convert_Testng$Covert.SignIn()[pri:0, instance:com.TestNG.Convert_Testng$Covert@4bd31064]">&gt;&gt;SignIn</td> 
+<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@297490204</td>   <td></td> </tr>
+<tr bgcolor="6b6398">  <td>22/01/16 23:09:50</td>   <td>-28418</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="Convert_Testng$Covert.frame()[pri:1, instance:com.TestNG.Convert_Testng$Covert@4bd31064]">frame</td> 
+  <td>main@297490204</td>   <td></td> </tr>
+<tr bgcolor="6b6398">  <td>22/01/16 23:10:18</td>   <td>-2</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;Convert_Testng$Covert.test_ending()[pri:0, instance:com.TestNG.Convert_Testng$Covert@4bd31064]">&lt;&lt;test_ending</td> 
+<td>&nbsp;</td>  <td>main@297490204</td>   <td></td> </tr>
+<tr bgcolor="6b6398">  <td>22/01/16 23:10:18</td>   <td>-2</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;Convert_Testng$Covert.test_ending()[pri:0, instance:com.TestNG.Convert_Testng$Covert@4bd31064]">&lt;&lt;test_ending</td> 
+<td>&nbsp;</td>  <td>main@297490204</td>   <td></td> </tr>
+<tr bgcolor="6b6398">  <td>22/01/16 23:10:18</td>   <td>-2</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;Convert_Testng$Covert.test_ending()[pri:0, instance:com.TestNG.Convert_Testng$Covert@4bd31064]">&lt;&lt;test_ending</td> 
+<td>&nbsp;</td>  <td>main@297490204</td>   <td></td> </tr>
+<tr bgcolor="6b6398">  <td>22/01/16 23:09:59</td>   <td>-19377</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;Convert_Testng$Covert.test_starting()[pri:0, instance:com.TestNG.Convert_Testng$Covert@4bd31064]">&gt;&gt;test_starting</td> 
+<td>&nbsp;</td>  <td>main@297490204</td>   <td></td> </tr>
+<tr bgcolor="6b6398">  <td>22/01/16 23:09:59</td>   <td>-19377</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;Convert_Testng$Covert.test_starting()[pri:0, instance:com.TestNG.Convert_Testng$Covert@4bd31064]">&gt;&gt;test_starting</td> 
+<td>&nbsp;</td>  <td>main@297490204</td>   <td></td> </tr>
+<tr bgcolor="6b6398">  <td>22/01/16 23:09:59</td>   <td>-19377</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;Convert_Testng$Covert.test_starting()[pri:0, instance:com.TestNG.Convert_Testng$Covert@4bd31064]">&gt;&gt;test_starting</td> 
+<td>&nbsp;</td>  <td>main@297490204</td>   <td></td> </tr>
 </table>
